--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "9.2.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "swr": "^0.1.16"
+    "swr": "^0.1.16",
+    "plutt-login": "git+https://github.com/juliuscc/realworld-plutt-microapp-login.git",
+    "plutt-tags": "git+https://github.com/juliuscc/realworld-plutt-microapp-tags.git"
   }
 }
